--- a/architecture/index.mdx
+++ b/architecture/index.mdx
@@ -98,16 +98,6 @@ The OFAuth Public API v2 is organized into four main categories:
 	>
 		Error codes, response formats, and debugging
 	</Card>
-	<Card
-		title="Performance & Monitoring"
-		icon="chart-line"
-		href="/architecture/performance"
-	>
-		Caching, optimization, and observability
-	</Card>
-	<Card title="Webhooks" icon="webhook" href="/architecture/webhooks">
-		Event-driven architecture and real-time notifications
-	</Card>
 </CardGroup>
 
 ## Migration & Versioning
@@ -151,7 +141,7 @@ The OFAuth Public API v2 is organized into four main categories:
 ---
 
 <Info>
-	**Ready to implement?** Check out our [API Reference](/api-reference/overview)
-	for detailed endpoint documentation, or jump to the [Link API
-	Guide](/guides/link/overview) to start with authentication.
+	**Ready to implement?** Start with the [Access API reference](/api-reference/access/overview)
+	for endpoint details, or jump to the [Link API Guide](/guides/link/overview) to
+	begin with authentication.
 </Info>
