--- a/getting-started/quickstart/index.mdx
+++ b/getting-started/quickstart/index.mdx
@@ -50,23 +50,6 @@ guides. Choose the path that matches your needs:
 
 </AccordionGroup>
 
-## Why Developers Choose OFAuth
-
-<CardGroup cols={2}>
-  <Card title="Development Cost Savings" icon="piggy-bank">
-    **Save $50K-200K** in first-year development costs vs building OnlyFans integration in-house
-  </Card>
-  <Card title="Shipping Velocity" icon="zap">
-    **10x faster** feature development - ship your first OnlyFans feature in days, not months
-  </Card>
-  <Card title="Time to Market" icon="clock">
-    **Launch in weeks** instead of 6+ months of infrastructure development
-  </Card>
-  <Card title="Infrastructure Focus" icon="server">
-    **100% focus** on business logic while we handle OnlyFans complexity
-  </Card>
-</CardGroup>
-
 ## Recommended Learning Path
 
 <Steps>
@@ -104,20 +87,21 @@ guides. Choose the path that matches your needs:
 ### Authentication Methods
 
 - **Hosted Mode**: Users authenticate on OFAuth's secure pages (recommended for
-  beginners)
-- **API Mode**: Full control over authentication UX (requires approval)
-- **Session Headers**: Use your own OnlyFans sessions with Access API
+  every integration)
+- **Embed Mode**: Deliver the hosted experience in a popup without redirecting
+- **Session Headers**: Use your own OnlyFans sessions with Access API (advanced)
 
 ## Next Steps
 
 Once you complete the quickstart guides:
 
+
 <CardGroup cols={3}>
-	<Card title="Production Guide" icon="shield" href="/guides/production">
-		Security, webhooks, and best practices
+	<Card title="Production Considerations" icon="shield" href="/getting-started/production-considerations">
+		Hardening checklist before you launch to production
 	</Card>
-	<Card title="API Reference" icon="book" href="/api-reference/overview">
-		Complete endpoint documentation
+	<Card title="API Reference" icon="book" href="/api-reference/access/overview">
+		Start with Access endpoints, then branch to Link or Account reference
 	</Card>
 	<Card
 		title="Discord Community"
