--- a/index.mdx
+++ b/index.mdx
@@ -47,15 +47,23 @@ OFAuth represents the culmination of years of production experience - every feat
 		**Ready to build?** Sign up for free and get your API keys in minutes
 	</Card>
 	<Card title="Authentication Guide" icon="link" href="/guides/link/overview">
-		**Need integration help?** Choose between hosted or API mode authentication
+		**Need integration help?** Explore hosted and embed flows for Link authentication
 	</Card>
 	<Card title="Access API" icon="database" href="/guides/access">
 		**Want direct API access?** Use our proxied API for any programming language
 	</Card>
-	<Card title="API Reference" icon="key" href="/api-reference/overview">
-		**Want technical details?** Complete API documentation with examples
+	<Card title="API Reference" icon="key" href="/api-reference/access/overview">
+		**Want technical details?** Explore Access, Link, Account, and Dynamic Rules references
 	</Card>
 </CardGroup>
+
+<Tip>
+	Need a product-level overview first? Head back to the marketing site to compare
+	<a href="https://ofauth.com/products/link">Link</a>,
+	<a href="https://ofauth.com/products/access">Access</a>, the
+	<a href="https://ofauth.com/products/sdk">SDK</a>, and
+	<a href="https://ofauth.com/products/dynamic-rules">Dynamic Rules</a> offerings.
+</Tip>
 
 ## What You Can Build
 
