--- a/architecture/authentication.mdx
+++ b/architecture/authentication.mdx
@@ -14,17 +14,13 @@ apikey: YOUR_API_KEY
 x-platform-id: YOUR_PLATFORM_ID
 ```
 
-<Note>
-	**Platform ID**: The `x-platform-id` header is required for optimal performance. This identifies your platform/organization and enables fast API key validation. You can find your Platform ID in your OFAuth dashboard.
-</Note>
-
 <Warning>
 	**Security**: Keep your API keys secure. Never expose them in client-side
 	code, commit them to version control, or share them publicly.
 </Warning>
 
 <Info>
-	**Legacy Support**: If you're unable to provide the `x-platform-id` header immediately, the API will still work but with slightly higher latency as it needs to look up your platform from the database. We strongly recommend including this header for best performance.
+	**Legacy Support**: If you're unable to provide the `x-platform-id` header immediately, the API will still work but with slightly higher latency. We strongly recommend including this header for best performance. (This behavior will be phased out in 2026.)
 </Info>
 
 ### Connection-Based Access
@@ -42,13 +38,13 @@ x-connection-id: conn_abc123def456
 
 ```http
 apikey: YOUR_API_KEY
-x-bc: ONLYFANS_BC_HEADER
-user-id: ONLYFANS_USER_ID
-cookie: ONLYFANS_SESSION_COOKIE
-user-agent: ONLYFANS_USER_AGENT
+x-of-cookie: ONLYFANS_SESSION_COOKIE
+x-of-user-agent: ONLYFANS_USER_AGENT
+x-of-bc: ONLYFANS_X_BC (optional)
+x-of-user-id: ONLYFANS_USER_ID (optional)
 ```
 
-Connection IDs are obtained through the Link API authentication flow and represent an authenticated user's OnlyFans account with automatic session management. Alternatively, you can provide OnlyFans session headers directly if you handle authentication separately.
+Connection IDs are obtained through the Link API authentication flow and represent an authenticated user's OnlyFans account with automatic session management. Alternatively, you can provide OnlyFans session headers directly if you handle authentication separately. When doing so, ensure the cookie contains `fp`, `auth_id`, and `sess` values unless you override them with `x-of-bc` and `x-of-user-id`.
 
 ## Connection Management
 
