--- a/getting-started/production-considerations.mdx
+++ b/getting-started/production-considerations.mdx
@@ -5,101 +5,80 @@ description: "Critical considerations for building reliable OnlyFans integration
 
 ## Overview
 
-Building production applications that integrate with OnlyFans requires careful consideration of third-party dependency risks. This guide covers the critical factors you need to plan for when deploying OnlyFans integrations to production environments.
+Shipping an OnlyFans integration means navigating a fast-moving third-party surface area. This guide outlines the production realities and shows how OFAuth helps you stay ahead of changes while still owning your product experience.
 
-<Warning>
-	**Unofficial API Reality**: OnlyFans does not provide official API access for external developers. Their API is designed exclusively for their own website and applications. Building integrations means working with an API that actively tries to prevent external access and changes without any consideration for third-party developers.
-</Warning>
+<Info>
+	**Unofficial API Reality**: OnlyFans does not provide official API access for external developers. Their API is built for their own products, so behavior can shift without notice. OFAuth exists to absorb as much of that volatility as possible and give your team actionable signals instead of surprises.
+</Info>
 
 ## Understanding the Risk Landscape
 
 ### The Reality of OnlyFans' API
 
-**OnlyFans' API is not designed for external developers.** It's built specifically to power their own website and mobile applications, not to support third-party integrations. This fundamental reality creates several challenges:
+**OnlyFans' API is not designed for external developers.** It's built to serve their own website and mobile apps, which means third parties work with internal-first assumptions. Expect:
 
-- **No Developer Program**: OnlyFans doesn't offer official API access, documentation, or developer support
-- **Internal-First Design**: API endpoints, authentication, and data structures are optimized for OnlyFans' use cases, not external applications
-- **Active Prevention**: Request signing and anti-bot measures are specifically designed to prevent external API usage
-- **No Change Communication**: Updates are never announced, documented, or communicated to external developers
+- **No Developer Program**: OnlyFans doesn't offer official access, documentation, or developer support
+- **Internal-First Design**: Endpoints and data structures are optimized for OnlyFans' own use cases
+- **Active Change Surface**: Request signing and anti-bot measures evolve to protect their platform
+- **No Change Communication**: Updates ship silently as part of their internal roadmap
+
+<Tip>
+	**How OFAuth Helps**: We monitor these changes 24/7, publish upgrade guidance, and ship SDK patches so you can react with code, not guesswork.
+</Tip>
 
 ### OnlyFans' Integration Patterns
 
 Because the API isn't meant for external use, OnlyFans consistently demonstrates patterns that affect integrations:
 
-- **Sudden API Changes**: Authentication mechanisms, request signing, and API endpoints change without notice
-- **Unannounced Updates**: Changes happen as part of internal development cycles with no external consideration
-- **Anti-Integration Measures**: Security updates specifically target and break automated/external access patterns
-- **Infrastructure Changes**: Server configurations, rate limits, and access patterns change to serve OnlyFans' needs, not external integrations
+- **Sudden API Changes**: Authentication, request signing, and endpoints can change without notice
+- **Unannounced Updates**: Shifts arrive as part of their internal release cycle
+- **Security Hardening**: Anti-bot updates may block automation paths your product depends on
+- **Infrastructure Changes**: Rate limits or network behavior can adjust to serve their core apps first
+
+<Info>
+	**How OFAuth Helps**: Our change detection pipeline publishes incident notes and mitigation playbooks, giving you visibility minutes after a change instead of learning about it from user tickets.
+</Info>
 
 ### What This Means for Your Application
 
 Building on an API that isn't designed for external use creates inherent risks for any production application:
 
-- **Service Interruptions**: Your application may suddenly stop working when OnlyFans updates their internal systems
-- **Authentication Failures**: User login flows may break when OnlyFans changes their security measures
-- **Data Access Outages**: API calls may start failing when OnlyFans modifies endpoints or request signing algorithm
-- **No Recourse**: When things break, there's no official support channel or timeline for resolution
+- **Service Interruptions**: Core user flows may pause when OnlyFans updates their internal systems
+- **Authentication Adjustments**: Security tweaks can require quick refreshes to login flows
+- **Data Access Gaps**: Endpoint or signing changes can temporarily interrupt data retrieval
+- **No Official Support**: There is no vendor escalation path, so your team must own the response plan
 
-## Risk Mitigation Strategies
+<Tip>
+	**How OFAuth Helps**: We provide managed signing, link flows, and emergency patches, plus a human escalation path so outages become coordinated playbooks instead of all-hands incidents.
+</Tip>
 
-### 1. Architectural Resilience
+## Where OFAuth Fits
 
-<CardGroup cols={2}>
-	<Card title="Circuit Breakers" icon="shield">
-		Implement circuit breaker patterns to isolate OnlyFans API failures from your core application
-	</Card>
-	<Card title="Graceful Degradation" icon="arrow-down">
-		Design features that can operate in reduced capacity when OnlyFans APIs are unavailable
-	</Card>
-	<Card title="Retry Logic" icon="refresh">
-		Implement exponential backoff and intelligent retry mechanisms for transient failures
-	</Card>
-	<Card title="Fallback Systems" icon="route">
-		Build alternative workflows that don't depend on real-time OnlyFans API access
-	</Card>
-</CardGroup>
+- **Change Intelligence**: We monitor upstream shifts, publish incident notes, and ship SDK patches so you can react with fixes instead of fire drills.
+- **Managed Authentication**: Link keeps pace with login, device, and 2FA changes while delivering a predictable OAuth-style callback to your app.
+- **Stabilized Access Calls**: The Access API handles signing, retries, and schema smoothing so your code keeps working when OnlyFans silently updates payloads.
+- **Incident Support**: Status updates, webhook alerts, and human escalation give your team context when outages happen and guidance on how to respond.
 
-### 3. Data Management
+## Building Resilient Integrations
 
-<AccordionGroup>
+### Architecture Practices
 
-<Accordion title="Caching Strategies">
-	**Aggressive Caching**: Cache OnlyFans data more aggressively than typical APIs
-	
-	- Use longer TTL (time-to-live) values than normal
-	- Implement stale-while-revalidate patterns
-	- Cache responses even during errors for fallback use
-	- Consider using extended TTL during detected outages
-</Accordion>
+- Implement circuit breakers and graceful degradation so OnlyFans interruptions stay isolated from core product features.
+- Use retry backoff and queueing to survive transient networking, rate limits, or signing mismatches during rollout windows.
+- Wrap OnlyFans interactions in a dedicated service layer (or OFAuth SDK) to centralize upgrades and telemetry.
 
-<Accordion title="Offline-First Features">
-	**Design for Disconnection**: Build features that work without real-time API access
-	
-	- Queue actions for later sync when APIs are available
-	- Show cached data with "last updated" timestamps
-	- Provide offline-capable functionality where possible
-</Accordion>
+### Data Strategy
 
-<Accordion title="Data Backup">
-	**Local Data Storage**: Maintain local copies of critical data
-	
-	- User profiles and basic information
-	- Content metadata and references
-	- Analytics and performance data
-	- Configuration and preferences
-</Accordion>
+- Cache upstream responses aggressively with stale-while-revalidate, extending TTLs during incidents detected by OFAuth alerts.
+- Provide offline-capable experiences by queuing mutations and showing cached data with clear "last updated" context.
+- Keep local copies of the data your product cannot function without so reconnection becomes a resync, not a rebuild.
 
-</AccordionGroup>
+### Testing Outage Scenarios
 
-### 4. User Communication
-
-Transparent communication with users during outages is crucial:
-
-- **Proactive Notifications**: Alert users when OnlyFans connectivity issues are detected
-- **Clear Messaging**: Explain that issues are due to third-party dependencies
-- **Available Actions**: Guide users to features that still work during outages
-- **Recovery Updates**: Notify users when services are restored
-- **Status Pages**: Maintain a public status page reflecting OnlyFans dependencies
+- Simulate total API downtime, slow responses, and signature failures to confirm your fallbacks engage cleanly.
+- Validate user-critical flows when OFAuth provides cached data or delayed sync instead of live upstream calls.
+- Exercise session expiry paths so authentication shifts from OnlyFans do not strand users in broken states.
+- Rehearse your incident response using OFAuth status webhooks to ensure alerts reach the right team quickly.
 
 ## API-Specific Considerations
 
@@ -107,11 +86,11 @@ Transparent communication with users during outages is crucial:
 
 The request signing requirements exemplify the challenges of building on OnlyFans' unofficial API:
 
-- **Constantly Changing**: Signing algorithms, parameters, and formats change regularly as OnlyFans updates their anti-bot measures
+- **Constantly Changing**: Signing algorithms, parameters, and formats evolve regularly as OnlyFans updates their anti-bot measures
 - **No Documentation**: Changes are never announced or documented - they simply happen
-- **Active Countermeasures**: OnlyFans actively works to break automated access through signing changes
-- **Webhook Dependency**: Rely on OFAuth's monitoring to detect changes since OnlyFans provides no notifications
-- **Backup Strategies**: Always maintain fallback rules, though they may become obsolete quickly
+- **Anti-Automation Measures**: Security updates often focus on blocking scripted access
+- **Monitoring Signals**: Rely on OFAuth's monitoring to detect changes since OnlyFans provides no notifications
+- **Backup Strategies**: Maintain fallback rules, and refresh them with the hotfix guidance we share during incidents
 
 ### Link API
 
@@ -120,106 +99,36 @@ Authentication with OnlyFans presents unique challenges since it's not designed 
 - **Frequent Auth Changes**: OnlyFans regularly updates login flows, 2FA requirements, and security measures
 - **Bot Detection**: Authentication systems actively try to detect and block automated login attempts
 - **Session Management**: Sessions may be invalidated unexpectedly as OnlyFans tightens security
-- **No API Keys**: Unlike real APIs, there's no official authentication method for external applications
+- **No API Keys**: There is no official authentication method for external applications
+
+<Tip>
+	**How OFAuth Helps**: Our Link service keeps pace with auth shifts, from device verification to 2FA handling, giving you a consistent OAuth-style callback instead of rebuilding login automation.
+</Tip>
 
 ### Access API
 
 Accessing OnlyFans data through their unofficial API requires defensive strategies:
 
-- **Endpoint Instability**: API endpoints may change paths, parameters, or response formats without notice
-- **Rate Limit Uncertainty**: No published rate limits - they can change or be enforced differently at any time
-- **Data Format Changes**: Response structures may change as OnlyFans updates their internal data models
-- **Request Signing Changes**: Request signing algorithm or implementation may change which would make all OnlyFans API requests not work while the updates are implemented.
+- **Endpoint Instability**: Paths, parameters, or response payloads can shift without notice
+- **Rate Limit Uncertainty**: Limits are unpublished and may adjust dynamically
+- **Data Format Changes**: Response structures can change as OnlyFans updates their internal data models
+- **Request Signing Changes**: Signing updates can temporarily block data access while fixes are deployed
 
-## Deployment Best Practices
-
-### Infrastructure Setup
-
-<CardGroup cols={2}>
-	<Card title="Multi-Region Deployment" icon="globe">
-		Deploy across multiple regions to handle geographic OnlyFans outages
-	</Card>
-	<Card title="Load Balancing" icon="scale">
-		Distribute OnlyFans API calls across multiple proxy endpoints
-	</Card>
-	<Card title="Rate Limiting" icon="timer">
-		Implement intelligent rate limiting to avoid overwhelming systems during recovery
-	</Card>
-	<Card title="Health Monitoring" icon="heart">
-		Monitor OnlyFans API health separately from your application health
-	</Card>
-</CardGroup>
-
-### Code Organization
-
-Organize your OnlyFans integration code for maximum resilience:
-
-- **Service Layer Pattern**: Abstract OnlyFans API calls behind a service layer
-- **Separation of Concerns**: Distinguish between critical and non-critical operations
-- **Dependency Injection**: Make monitoring and caching systems configurable
-- **Error Boundaries**: Isolate OnlyFans failures from core application logic
-
-## Testing Outage Scenarios
-
-### Chaos Engineering
-
-Regularly test your application's behavior during OnlyFans outages:
-
-- **Complete Outages**: Simulate total OnlyFans API unavailability
-- **Degraded Performance**: Test with slow response times and timeouts
-- **Partial Failures**: Mock specific endpoint failures (like auth vs data endpoints)
-- **Network Issues**: Simulate connection drops and intermittent connectivity
-- **Authentication Failures**: Test behavior when user sessions become invalid
-
-### User Acceptance Testing
-
-- Test user flows during simulated outages
-- Verify error messages are helpful and actionable
-- Ensure offline features work as expected
-- Validate data consistency after outage recovery
-
-## Communication Planning
-
-### Internal Processes
-
-1. **Incident Response**: Clear escalation paths for OnlyFans-related outages
-2. **Status Page**: Maintain a status page that reflects OnlyFans dependencies
-3. **Customer Support**: Train support team on OnlyFans dependency issues
-4. **Development Team**: On-call rotation familiar with OnlyFans integration patterns
-
-### External Communication
-
-- **Transparency**: Be honest about third-party dependencies
-- **Proactive Updates**: Communicate known issues before users report them
-- **Recovery Timeline**: Provide realistic estimates (often "unknown" for OnlyFans issues)
-- **Alternative Actions**: Guide users to available functionality during outages
-
-## Legal and Business Considerations
-
-### Terms of Service
-
-- **Disclaimer Language**: Include appropriate disclaimers about third-party dependencies
-- **Service Level Agreements**: Set realistic SLAs that account for OnlyFans dependencies
-- **Limitation of Liability**: Protect against damages from OnlyFans outages
-
-### Business Continuity
-
-- **Revenue Impact**: Model the financial impact of extended OnlyFans outages
-- **Alternative Revenue**: Develop revenue streams that don't depend on real-time OnlyFans access
-- **Customer Retention**: Strategies to maintain customer relationships during outages
+<Info>
+	**How OFAuth Helps**: Our Access API abstracts these moving pieces behind stable SDK contracts, provides typed responses, and ships backward-compatible shims when OnlyFans changes their payloads.
+</Info>
 
 ## Conclusion
 
-Building production OnlyFans integrations means building on an API that was never intended for external use. Success requires accepting this fundamental reality and planning accordingly:
+Building production OnlyFans integrations means working with an API that was never intended for external use. Success comes from accepting that truth and partnering with tools that keep you nimble:
 
-1. **Realistic Expectations**: Understanding that you're building on an unofficial, constantly changing API
-2. **Defensive Architecture**: Building systems that can handle sudden, undocumented changes and complete service disruption
-3. **Proactive Monitoring**: Detecting issues quickly since OnlyFans won't communicate changes to you
-4. **Clear Communication**: Being transparent with users that your application depends on reverse-engineering someone else's internal systems
-5. **Continuous Adaptation**: Constantly updating your integration as OnlyFans changes their systems for their own needs
+1. **Set Realistic Expectations**: Treat OnlyFans as an unofficial, constantly changing integration surface.
+2. **Design for Change**: Use defensive architecture and OFAuth-managed services to absorb upstream shifts.
+3. **Monitor Continuously**: Lean on OFAuth alerts, webhooks, and telemetry so you can respond before customers feel impact.
+4. **Iterate Quickly**: Incorporate OFAuth patches and guidance into your release process to restore parity fast.
 
 <Info>
-	**Remember**: OnlyFans has no obligation to maintain compatibility with external integrations. The goal isn't to eliminate the risks of building on an unofficial API—that's impossible. The goal is to build systems that can adapt quickly when OnlyFans inevitably changes their systems for their own operational needs.
+	**Remember**: OnlyFans has no obligation to support external integrations. Your goal isn't to eliminate risk altogether—it's to build a resilient experience that keeps delivering value even when upstream systems shift. OFAuth is here to help you do exactly that.
 </Info>
 
 ## Next Steps
