--- a/getting-started/sdk-vs-api.mdx
+++ b/getting-started/sdk-vs-api.mdx
@@ -1,247 +1,81 @@
 ---
-title: "SDK vs Direct API"
-description: "Choose the right integration approach for your OnlyFans project"
+title: "SDK Directory"
+description: "Find the right OFAuth SDK for your language and runtime."
 ---
 
 ## Overview
 
-OFAuth provides two main ways to integrate with OnlyFans: our **Node.js SDK** and **Direct API access**. This guide helps you choose the right approach for your project.
+OFAuth publishes language-native SDKs that wrap our Access and Link APIs with strong typing, retry strategies, and opinionated workflows. Use this directory to jump straight to the toolkit that fits your stack, whether you build with dynamic scripting languages or compiled backends.
 
-<CardGroup cols={2}>
-  <Card title="OnlyFans SDK" icon="code" href="/sdk">
-    **TypeScript/Node.js Library**
-    
-    Higher-level abstraction with built-in best practices
+<Info>
+  Prefer to wire your own HTTP client? Head over to the [Access API guide](/guides/access) for request/response details and examples.
+</Info>
+
+## Server SDKs
+
+<CardGroup cols={3}>
+  <Card title="TypeScript & JavaScript" icon="code" href="https://docs-next.ofauth.com/sdk/typescript">
+    Official Node.js, Bun, and Deno support with end-to-end TypeScript typings.
   </Card>
-  <Card title="Direct APIs" icon="api" href="/guides/access">
-    **REST API Endpoints**
-    
-    Maximum flexibility for any programming language
+  <Card title="Python" icon="layers" href="https://docs-next.ofauth.com/sdk/python">
+    Async-friendly client for FastAPI, Django, and serverless workloads.
   </Card>
-</CardGroup>
-
-## Quick Comparison
-
-| Factor | OnlyFans SDK | Direct APIs |
-|--------|-------------|-------------|
-| **Languages** | Node.js/TypeScript only | Any language |
-| **Learning Curve** | 🟢 Easy | 🟡 Moderate |
-| **Type Safety** | ✅ Full TypeScript support | ⚠️ Manual typing |
-| **Error Handling** | ✅ Built-in patterns | 🔨 Manual implementation |
-| **Documentation** | 📚 Method-level docs | 📖 Endpoint docs |
-| **Best Practices** | ✅ Built-in | 🔨 Manual implementation |
-| **Maintenance** | 🔄 Auto-updates | 🔨 Manual API changes |
-
-## When to Choose the SDK
-
-<AccordionGroup>
-  <Accordion title="✅ Perfect for Node.js Projects">
-    If you're building with Node.js, TypeScript, or JavaScript frameworks (Next.js, Express, etc.), the SDK provides the smoothest development experience.
-  </Accordion>
-  
-  <Accordion title="✅ Faster Development">
-    Pre-built methods, error handling, and TypeScript definitions significantly reduce development time and bugs.
-  </Accordion>
-  
-  <Accordion title="✅ Built-in Best Practices">
-    Automatic retry logic, rate limiting, session management, and error handling follow production-tested patterns.
-  </Accordion>
-  
-  <Accordion title="✅ Better Developer Experience">
-    IDE autocomplete, inline documentation, and type checking catch errors before runtime.
-  </Accordion>
-</AccordionGroup>
-
-## When to Choose Direct APIs
-
-<AccordionGroup>
-  <Accordion title="✅ Non-Node.js Languages">
-    Building with Python, PHP, Ruby, Go, Java, C#, or other languages? Direct APIs provide maximum compatibility.
-  </Accordion>
-  
-  <Accordion title="✅ Custom Requirements">
-    Need specific request handling, custom authentication flows, or unique error handling? Direct APIs offer full control.
-  </Accordion>
-  
-  <Accordion title="✅ Lightweight Integration">
-    Simple use cases or microservices that only need a few endpoints may prefer the minimal overhead of direct API calls.
-  </Accordion>
-  
-  <Accordion title="✅ Existing Architecture">
-    Already have robust HTTP client infrastructure, error handling, and API patterns in place.
-  </Accordion>
-</AccordionGroup>
-
-## Code Comparison
-
-### User Profile Fetch
-
-<Tabs>
-  <Tab title="SDK (Node.js)">
-    ```typescript
-    import OFSDK from "@ofauth/onlyfans-sdk"
-    
-    const sdk = new OFSDK({
-      mode: "access",
-      ofauthApiKey: process.env.OFAUTH_API_KEY
-    })
-    
-    // Type-safe method with built-in error handling
-    const { data, error } = await sdk.self.getMe({
-      authentication: { connectionId: "conn_123" }
-    })
-    
-    if (error) {
-      console.error("Error:", error.message)
-      return
-    }
-    
-    // Full TypeScript typing
-    console.log(`Username: ${data.username}`)
-    console.log(`Subscribers: ${data.subscribersCount}`)
-    ```
-  </Tab>
-  
-  <Tab title="Direct API (Any Language)">
-    ```javascript
-    // Manual HTTP request
-    const response = await fetch("https://api.ofauth.com/v2/access/users/me", {
-      headers: {
-        "apikey": process.env.OFAUTH_API_KEY,
-        "x-connection-id": "conn_123"
-      }
-    })
-    
-    // Manual error handling
-    if (!response.ok) {
-      const error = await response.json()
-      console.error("API Error:", error)
-      return
-    }
-    
-    // Manual type handling
-    const userData = await response.json()
-    console.log(`Username: ${userData.username}`)
-    console.log(`Subscribers: ${userData.subscribersCount}`)
-    ```
-  </Tab>
-</Tabs>
-
-### Message Sending
-
-<Tabs>
-  <Tab title="SDK (Node.js)">
-    ```typescript
-    // Rich method with validation and retry logic
-    const { data, error } = await sdk.messages.sendChatMessage({
-      authentication: { connectionId: "conn_123" },
-      userId: 123456,
-      params: {
-        text: "Hello! Here's your custom content.",
-        mediaItems: ["/path/to/image.jpg"],
-        price: 10.00
-      }
-    })
-    
-    if (error) {
-      // Structured error handling
-      if (error.type === "unauthorized") {
-        // Handle auth refresh
-      } else if (error.retry) {
-        // Automatic retry suggestion
-      }
-      return
-    }
-    
-    console.log(`Message sent: ${data.id}`)
-    ```
-  </Tab>
-  
-  <Tab title="Direct API (Any Language)">
-    ```javascript
-    // Manual request construction
-    const response = await fetch("https://api.ofauth.com/v2/access/proxy/chats/rooms/123456/messages", {
-      method: "POST",
-      headers: {
-        "apikey": process.env.OFAUTH_API_KEY,
-        "x-connection-id": "conn_123",
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({
-        text: "Hello! Here's your custom content.",
-        mediaItems: ["/path/to/image.jpg"],
-        price: 10.00
-      })
-    })
-    
-    // Manual response handling
-    const result = await response.json()
-    if (response.ok) {
-      console.log(`Message sent: ${result.id}`)
-    } else {
-      console.error("Send failed:", result)
-    }
-    ```
-  </Tab>
-</Tabs>
-
-## Migration Path
-
-### Starting with Direct APIs
-
-Many developers start with direct APIs for quick prototyping or specific requirements:
-
-```javascript
-// Direct API prototype
-const posts = await fetch("https://api.ofauth.com/v2/access/users/me/posts", {
-  headers: { apikey: API_KEY, "x-connection-id": connectionId }
-})
-```
-
-### Upgrading to SDK
-
-When projects grow or need better maintainability, migrating to the SDK is straightforward:
-
-```typescript
-// SDK equivalent with added benefits
-const { data: posts, error } = await sdk.posts.getAll({
-  authentication: { connectionId },
-  limit: 20,
-  order: "publish_date_desc"
-})
-```
-
-## Recommendations
-
-<CardGroup cols={2}>
-  <Card title="Choose SDK if:" icon="thumbs-up">
-    - Building with Node.js/TypeScript
-    - Want faster development
-    - Need production reliability
-    - Prefer guided development experience
+  <Card title="Go" icon="settings" href="https://docs-next.ofauth.com/sdk/go">
+    Idiomatic Go modules with context-aware requests and structured errors.
   </Card>
-  <Card title="Choose Direct APIs if:" icon="settings">
-    - Using other programming languages
-    - Have specific integration requirements
-    - Building lightweight services
-    - Have existing API infrastructure
+  <Card title="Java" icon="package" href="https://docs-next.ofauth.com/sdk/java">
+    JVM SDK with Spring Boot starters and reactive call patterns.
+  </Card>
+  <Card title=".NET (C#)" icon="boxes" href="https://docs-next.ofauth.com/sdk/dotnet">
+    Works across ASP.NET Core, Azure Functions, and background worker services.
+  </Card>
+  <Card title="PHP" icon="layers" href="https://docs-next.ofauth.com/sdk/php">
+    Composer package optimized for Laravel and Symfony service layers.
+  </Card>
+  <Card title="Elixir" icon="zap" href="https://docs-next.ofauth.com/sdk/elixir">
+    OTP-ready client with supervision and telemetry hooks for BEAM apps.
+  </Card>
+  <Card title="Rust" icon="cpu" href="https://docs-next.ofauth.com/sdk/rust">
+    Safe, async-first library with strong typing and feature-gated modules.
+  </Card>
+  <Card title="Perl" icon="terminal" href="https://docs-next.ofauth.com/sdk/perl">
+    Lightweight client for existing Perl automation and integration scripts.
   </Card>
 </CardGroup>
 
-## Getting Started
+## Quick Reference
+
+| Language | Runtime(s) | Documentation |
+|----------|-------------|---------------|
+| TypeScript & JavaScript | Node.js, Bun, Deno | [docs-next.ofauth.com/sdk/typescript](https://docs-next.ofauth.com/sdk/typescript) |
+| Python | CPython, PyPy | [docs-next.ofauth.com/sdk/python](https://docs-next.ofauth.com/sdk/python) |
+| Go | Go 1.21+ | [docs-next.ofauth.com/sdk/go](https://docs-next.ofauth.com/sdk/go) |
+| Java | Java 17+ | [docs-next.ofauth.com/sdk/java](https://docs-next.ofauth.com/sdk/java) |
+| .NET (C#) | .NET 8+ | [docs-next.ofauth.com/sdk/dotnet](https://docs-next.ofauth.com/sdk/dotnet) |
+| PHP | PHP 8.1+ | [docs-next.ofauth.com/sdk/php](https://docs-next.ofauth.com/sdk/php) |
+| Elixir | OTP 26 / Elixir 1.16+ | [docs-next.ofauth.com/sdk/elixir](https://docs-next.ofauth.com/sdk/elixir) |
+| Rust | Rust 1.76+ (Tokio) | [docs-next.ofauth.com/sdk/rust](https://docs-next.ofauth.com/sdk/rust) |
+| Perl | Perl 5.36+ | [docs-next.ofauth.com/sdk/perl](https://docs-next.ofauth.com/sdk/perl) |
+
+## Shared Capabilities
+
+- Consistent method naming and authentication helpers across languages.
+- Built-in retry logic tuned for OnlyFans rate limiting policies.
+- Structured error envelopes so you can triage without parsing raw bodies.
+- Examples for Link handshakes, Access data pulls, and webhook validation.
 
 <Steps>
-  <Step title="Assess Your Stack">
-    Consider your programming language, project requirements, and team expertise.
+  <Step title="Pick Your SDK">
+    Choose the language that matches your production runtime from the directory above.
   </Step>
-  <Step title="Start Simple">
-    Both approaches can begin with the same account setup and authentication flows.
+  <Step title="Install & Configure">
+    Follow the linked guide for install commands, authentication helpers, and environment variables.
   </Step>
-  <Step title="Scale Appropriately">
-    You can always switch approaches as your project evolves and requirements change.
+  <Step title="Launch Your First Call">
+    Start with the quickstart sample—each SDK ships with basic Link and Access workflows to copy.
   </Step>
 </Steps>
 
 <Info>
-  **Not sure?** Start with our [Quick Start guide](/quickstart) which covers both approaches, or check out the [SDK overview](/sdk) for a hands-on introduction.
-</Info> 
+  Need another language or want to contribute improvements? Open an issue on the relevant SDK repo or message us at [support@ofauth.com](mailto:support@ofauth.com).
+</Info>
